@@ -1,3 +1,6 @@
+18 April 2004  Menelaos Karavelas <mkaravel@cse.nd.edu>
+- added code for input and output sites iterator
+
 15 April 2004  Menelaos Karavelas <mkaravel@cse.nd.edu>
 - the point container is not hardcoded
 - the traits classes is now split in two different classes; there is
